[package]
name = "column_store"
description = "Column-oriented database management system."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/column_store/tree/master/column_store"
version = "0.1.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"
keywords = ["data-oriented-design"]

[dependencies]
column_store_proc_macros = { version = "0", path = "../column_store_proc_macros" }
derive-new = "0.5.9"
fd-lock = "3.0.0"
tempfile = "3.2.0"
thiserror = "1.0.29"
ulid = "0.4.1"
