[package]
name = "column_store_proc_macros"
description = "Procedural macros for crate column_store."
license = "ISC"
readme = "README.md"
repository = "https://github.com/ctsrc/column_store/tree/master/column_store_proc_macros"
version = "0.1.0"
authors = ["Erik Nordstrøm <erik@nordstroem.no>"]
edition = "2018"
keywords = ["data-oriented-design"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = "1.0.76"
